--- a/scss/bootstrap.scss
+++ b/scss/bootstrap.scss
@@ -1,4 +1,10 @@
 // Font
-$font-family-sans-serif: 'Open Sans', sans-serif;
+$font-family-sans-serif: "Open Sans", sans-serif;
 
-@import '../node_modules/bootstrap/scss/bootstrap';
+// Colors
+$primary: #c167ef;
+$secondary: #10bcee;
+$dark: #2b3041;
+$light: #f3f6f9;
+
+@import "../node_modules/bootstrap/scss/bootstrap";
