done testimonials, download and social section

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -20,7 +20,24 @@
     max-width: 1040px;
 }
 
+.download {
+    background: url("../images/download-background.jpg") center center no-repeat;
+    background-size: cover;
+}
+
+.map iframe {
+    left: 0;
+    top: 0;
+    height: 400px;
+    width: 100%;
+    border: none;
+}
+
 @media (max-width: 1000px) {
+    .navbar {
+        background: var(--bs-dark);
+    }
+
     .hero .image-container {
         display: flex;
         justify-content: center;
